# TavariClient

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: github-releases.md
scripts/: manual-release.ps1  release-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backend.rs  launcher.rs  main.rs  models.rs  startup.rs  storage.rs
tauri-ui/: app.js  index.html  splash.css  splash.html  splash.js  styles.css
