[package]
name = "tavari-client"
version = "1.0.18"
edition = "2021"
description = "Tavari Client launcher shell in Rust and Tauri"
license = "CCANC"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
directories = "6"
ed25519-dalek = "2"
lighty-auth = "0.8.6"
lighty-launcher = { version = "0.8.6", features = ["all-loaders"] }
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4", "v5"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[patch.crates-io]
lighty-java = { path = "../vendor/lighty-java-0.8.6" }
lighty-launch = { path = "../vendor/lighty-launch-0.8.6" }
